--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x Oxygen/sonic3air/build/_android/gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: Oxygen/sonic3air/build/_android/gradlew build
