--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,6 +22,7 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x Oxygen/sonic3air/build/_android/gradlew
-    - name: Build with Gradle
+    - name: Changing the directory to the one with gradle
       run: cd Oxygen/sonic3air/build/_android/
+    - name: Build with Gradle
       run: gradlew build
